大屏管理页面

--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -1,9 +1,4 @@
-doctype html
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    title Document
-  body
-    
+extends part/basic.pug
+
+append vars
+  - var title = "情报管理"
