--- a/src/html/part/basic.pug
+++ b/src/html/part/basic.pug
@@ -7,6 +7,7 @@ html(lang="zh")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     title 保密情报信息管理平台 | #{title}
     link(rel="stylesheet", href="lib/flatpickr.min.css")
+    link(rel="stylesheet", href="lib/confirmDate.css")
     link(rel="stylesheet", href="lib/themes/airbnb.css")
     link(rel="stylesheet", href="style/basic.css")
     block style
@@ -53,6 +54,7 @@ html(lang="zh")
     block tpl
     script(src="lib/jquery.min.js")
     script(src="lib/flatpickr.min.js")
+    script(src="lib/confirmDate.js")
     script(src="lib/l10n/zh.js")
     script(src="script/basic.js")
     block script
