--- a/src/style/basic.styl
+++ b/src/style/basic.styl
@@ -49,6 +49,9 @@ body
       font-size 12px
   >button:focus + .list
     display block
+  &.fixed>button>.text
+    width 90px
+    text-align left
 
 .m-head
   height 79px
@@ -80,6 +83,8 @@ body
       border-bottom-left-radius 4px
       >button>.ico
         margin-right 10px
+      >button>.text
+        width 36px
       >.list
         top 39px
     [type=text]
@@ -134,21 +139,21 @@ body
   height 690px
   position absolute
   left calc(50% - 639px)
-  margin-bottom 20px
+  margin-bottom 18px
   >.item
-    height 57px
-    margin-bottom 15px
+    height 37px
+    margin-bottom 20px
     border-left 4px solid transparent
     padding-left 44px
     color #2c2f32
     font-size 14px
-    padding-top 20px
+    padding-top 10px
     box-sizing border-box
     cursor pointer
+    display block
     &.active
-      background #5cc86a
-      color white
-      border-left-color #1caf2f
+      color #4188d8
+      border-left-color #4188d8
     >.icon
       width 16px
       height 16px
@@ -162,6 +167,29 @@ body
     >.text
       float left
       line-height 16px
+    &:after
+      content '>'
+      float right
+      line-height 14px
+      font-family Consolas, sans-serif
+      margin-right 20px
+    &.active:after
+      transform rotate(90deg)
+  >.list
+    display none
+    margin-bottom 18px
+    >.item
+      display block
+      text-decoration none
+      color #98a0a9
+      font-size 12px
+      line-height 37px
+      padding-left 74px
+      &.active
+        color #41454b
+        background #e7f1fb
+  >.item.active + .list
+    display block
 
 .m-cont
   position absolute
