--- a/src/html/part/大屏管理-情报展示.pug
+++ b/src/html/part/大屏管理-情报展示.pug
@@ -15,5 +15,6 @@ block content
     .dir 当前位置：#{title} > #{subtitle} > #{sstitle}
     +filter(title + '-' + subtitle)
     +contlist(title + '-' + subtitle)
+  .m-showbtn= sstitle == "展示" ? "取消展示" : "展示" 
   +pagenum()
 
