--- a/src/style/大屏管理-专题展示.styl
+++ b/src/style/大屏管理-专题展示.styl
@@ -8,7 +8,6 @@
   width 209px
   height 315px
   border-radius 5px
-  transition all .3s ease
   cursor pointer
   box-shadow 0 2px 5px rgba(0,0,0,.15)
   display inline-block
@@ -17,11 +16,60 @@
   background #ffffff
   overflow hidden
   font-size 12px
+  position relative
+  &.active
+    outline 2px solid #4188d8
+    border-radius 0
+    &:before
+      content ''
+      width 20px
+      height 20px
+      position absolute
+      top 0
+      right 0
+      background url(../image/dpgl-ztzs-check.png)
+    &:after
+      content ''
+      width 45px
+      height 45px
+      box-sizing border-box
+      border 23px solid #4188d8
+      border-top-color transparent
+      border-left-color transparent
+      position absolute
+      bottom 0
+      right 0
+  &.hover>.mask
+    visibility visible
+    opacity 1
   &:nth-child(4n)
     margin-right 0
-  &:hover
-    transform translateY(-10px)
-    box-shadow 0 5px 15px rgba(65,136,216,.35)
+  >.mask
+    position absolute
+    visibility hidden
+    top 0
+    left 0
+    right 0
+    bottom 0
+    background rgba(0,0,0,.4)
+    opacity 0
+    z-index 10
+    transition all .3s ease
+    padding-top 79px
+    padding-left 48px
+    >.btn
+      width 110px
+      height 30px
+      display block
+      background white
+      border-radius 2px
+      border 1px solid rgba(191,191,191,.6)
+      text-decoration none
+      color #41454b
+      line-height @height
+      font-size 12px
+      text-align center
+      margin-bottom 30px
   >.title
     background #1ab394
     color white
