完成大屏管理页面

--- a/src/html/part/func.pug
+++ b/src/html/part/func.pug
@@ -8,7 +8,7 @@ mixin filter(page)
           .cont 全选
         if page == '大屏管理-情报展示'
           .btn 时间升序
-          .btn 批量选中
+          .btn.selallbtn 批量选中
           .btn= '批量' + (sstitle == "展示" ? "取消展示" : "展示" )
       .right
         if page == '大屏管理-情报展示'
