--- a/src/html/part/大屏管理-专题展示.pug
+++ b/src/html/part/大屏管理-专题展示.pug
@@ -43,7 +43,7 @@ block content
             .item 1.  朴槿惠下台的最新消息...
             .item 2.  朴槿惠下台的最新消息...
           .mask
-            a.btn(href="javascript:;") 专题详情
+            a.btn(href="大屏管理-专题详情-展示.html") 专题详情
             a.btn(href="javascript:;") 取消展示
             a.btn.cancel(href="javascript:;") 取消
   .m-showbtn= sstitle == "展示" ? "取消展示" : "展示" 
