--- a/src/html/大屏管理-专题详情-展示.pug
+++ b/src/html/大屏管理-专题详情-展示.pug
@@ -1,4 +1,4 @@
-extends part/basic.pug
+extends part/大屏管理-专题详情.pug
 
-append style
-  link(rel="stylesheet", href="style/大屏管理-专题详情.css")
+append vars
+  - var sstitle = "展示"
