--- a/src/style/basic.styl
+++ b/src/style/basic.styl
@@ -422,3 +422,70 @@ body
   text-align center
   line-height @height
   cursor pointer
+
+// 弹框
+.bomb
+  display none
+  position fixed
+  top 0
+  bottom 0
+  left 0
+  right 0
+  background rgba(0,0,0,0.4)
+  >div
+    position absolute
+    top 50%
+    left 50%
+    margin-top -112.5px
+    margin-left -210px
+    width 420px
+    height 225px
+    background #fff
+    border-radius 5px
+    overflow hidden
+    .title
+      position relative
+      height 50px
+      line-height 50px
+      border 1px solid #c8ced9
+      padding 0 20px
+      font-size 16px 
+      color #696969
+      i
+        position absolute
+        width 20px
+        height 20px
+        text-align center
+        font-style  normal
+        top 15px
+        right 15px
+        font-size 25px
+        line-height 20px
+        cursor pointer
+    .body
+      height 115px
+      line-height 115px
+      text-align center
+      font-size 16px
+      color #696969
+    .btn
+      padding 0 60px
+      font-size 0
+      div
+        display inline-block
+        width 140px
+        height 36px
+        line-height 36px
+        box-sizing border-box
+        text-align center
+        font-size 14px
+        overflow hidden
+        border-radius 3px
+        cursor pointer
+        &.cancel
+          border 1px solid #4188d8
+          color #4188d8
+          margin-right 18px
+        &.success
+          background #4188d8
+          color #fff 
