--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -1,4 +1,10 @@
-extends part/basic.pug
-
-append vars
-  - var title = "情报管理"
+doctype html
+html(lang="en")
+  head
+    meta(charset="UTF-8")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    meta(http-equiv="X-UA-Compatible", content="ie=edge")
+    title Document
+  body
+    script.
+      location.href = '情报库-编辑情报.html'
