--- a/src/html/part/basic.pug
+++ b/src/html/part/basic.pug
@@ -95,6 +95,27 @@ html(lang="zh")
         div.btn 
           div.cancel 取消
           div.success 确定
+    .bomp-password
+      div.info
+        div.title 修改密码
+          i.close ×
+        div.body.password
+          ul
+            li
+              label 账户名称:
+              label admin
+            li
+              label 旧密码:
+              input(placeholder="请输入旧密码")
+            li
+              label 新密码:
+              input(placeholder="请输入新密码")
+            li
+              label 确认密码:
+              input(placeholder="请输入新密码")
+        div.btn 
+          div.cancel 取消
+          div.success 确定           
     block tpl
     script(src="lib/jquery.min.js")
     script(src="lib/flatpickr.min.js")
