--- a/src/style/basic.styl
+++ b/src/style/basic.styl
@@ -489,3 +489,187 @@ body
         &.success
           background #4188d8
           color #fff 
+.mrt90
+  margin-top 90px
+//密码修改弹框
+.bomp-password
+  display none
+  position fixed
+  top 0
+  bottom 0
+  left 0
+  right 0
+  background rgba(0,0,0,0.4)
+  >div.info
+    height 395px
+    margin-top -197.5px
+    position absolute
+    top 50%
+    left 50%
+    margin-left -210px
+    width 420px
+    background #fff
+    border-radius 5px
+    overflow hidden
+    .title
+      position relative
+      height 50px
+      line-height 50px
+      border 1px solid #c8ced9
+      padding 0 20px
+      font-size 16px 
+      color #696969
+      font-size 14px
+      i
+        position absolute
+        width 20px
+        height 20px
+        text-align center
+        font-style  normal
+        top 15px
+        right 15px
+        font-size 25px
+        line-height 20px
+        cursor pointer
+    .body
+      height 254px
+      font-size 14px
+      color #696969
+      ul
+        list-style none
+        padding 0
+        padding 0 20px
+        li
+          height 36px
+          line-height 36px
+          margin-bottom 30px
+          label:nth-child(1)
+            width 65px
+            text-align right
+            display inline-block
+            margin-right 10px
+          label:nth-child(2)
+            color #909499
+          input
+            height 36px
+            width 260px
+            line-height 36px
+            outline: none;
+            -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+            padding: 0 10px;
+            border-radius: 3px;
+            border: 1px solid #c1c3c4;
+            font-size: 12px;
+            color: #909499
+        li:nth-child(1)
+          margin-bottom 17px
+    .btn
+      padding 0 60px
+      font-size 0
+      div
+        display inline-block
+        width 140px
+        height 36px
+        line-height 36px
+        box-sizing border-box
+        text-align center
+        font-size 14px
+        overflow hidden
+        border-radius 3px
+        cursor pointer
+        &.cancel
+          border 1px solid #4188d8
+          color #4188d8
+          margin-right 18px
+        &.success
+          background #4188d8
+          color #fff 
+.login
+  width 1294px
+  height 744px
+  background url(../image/dlbg.png) no-repeat
+  background-size cover
+  border-radius 5px
+  position absolute
+  left calc(50% - 647px)
+  top calc(50% - 372px)
+  >div
+    position absolute
+    left 140px
+    top 148px
+    width 368px
+    .title
+      font-size 32px
+      color #417dd8
+      height 32px
+      line-height 32px
+    input
+      box-sizing border-box
+      border-radius 3px
+      border 1px solid #c1c3c4
+      height 60px
+      line-height 60px
+      padding 0 10px
+      color #525458
+      font-size 16px
+      background-size 13px 16px
+    .admin
+      margin-bottom 19px
+      margin-top 50px
+      input
+        width 368px
+        background url(../image/Profile.png) no-repeat left 15px center
+        padding-left 40px
+    .pass-word
+      margin-bottom 19px
+      input
+        width 368px
+        background url(../image/Lock.png) no-repeat left 15px center
+        padding-left 40px
+    .Vercode
+      margin-bottom 10px
+      label
+        display inline-block
+      label:nth-child(2)
+        width 122px
+        height 52px
+        background url(../image/yzm.png) no-repeat
+        background-size cover
+        float right
+        margin-top 4px 
+      a
+        float right
+        text-decoration none
+        color #417dd8
+        font-size 13px
+      input
+        width 196px
+        padding-left 20px
+    .mind
+      >label
+        input[type="checkbox"]
+          display none
+        div
+          display inline-block
+          vertical-align middle
+          color #b0b8c9
+          font-size 13px
+          margin-left 5px
+        .img
+          width 20px
+          height 20px
+          background: url(../image/basic-check-o.png) no-repeat
+          background-size contain
+        input[type="checkbox"]:checked ~ .img
+          background: url(../image/dpgl-ztzs-check.png) no-repeat
+    .btn 
+      background #417dd8
+      color #ffffff
+      width 368px
+      height 50px
+      line-height 50px
+      border-radius 4px
+      text-align center
+      margin-top 65px
+      box-shadow  0px 2px 5px rgba(65,125,216,0.6)
