--- a/src/style/情报库.styl
+++ b/src/style/情报库.styl
@@ -198,6 +198,30 @@
       list-style none
       font-size 0
       margin-bottom 30px
+      >.m-dropdown
+        display inline-block
+        vertical-align bottom
+      .btn
+        min-width 180px
+        border 1px solid #c1c3c4
+        background transparent
+        border-radius 3px
+        height 36px
+        box-sizing border-box
+        padding 0 10px
+        vertical-align bottom
+        color #959ca3
+        line-height 36px
+        text-align center
+        cursor pointer
+        >.text
+          width 140px  
+      >button>.ico
+        margin-left 5px
+        vertical-align 2px
+        filter grayscale(1)
+      .list
+        top 38px
       .title
         display inline-block
         font-size 14px
@@ -254,6 +278,34 @@
           cursor pointer
           &.delete
             color red
+.admin-info
+  margin-top 43px
+  ul
+    list-style none
+    li
+      font-size 14px
+      margin-bottom 30px
+      height 24px
+      line-height 24px
+      label:nth-child(1)
+        color #696969
+      label:nth-child(2)
+        color #909499
+        position relative
+      >.password
+        position: absolute
+        top 4px
+      >.btn
+        color #ffffff
+        background #5cc86a
+        height 24px
+        line-height 24px
+        font-size 12px
+        width 80px
+        text-align center
+        display inline-block
+        margin-left 30px
+        
 
 
     
