--- a/src/html/part/basic.pug
+++ b/src/html/part/basic.pug
@@ -15,6 +15,7 @@ html(lang="zh")
   body
     .m-head
       .logo
+        img(src="image/logo.png", draggable="false")
         img(src="image/basic-head-logo.png", draggable="false")
       .search
         .m-dropdown.select
