--- a/src/style/basic.styl
+++ b/src/style/basic.styl
@@ -70,7 +70,10 @@ body
     display table-cell
     vertical-align top
   >.logo
-    padding-top 16px
+    padding-top 13px
+    img
+      margin-right 10px
+      vertical-align middle
   >.search
     width 280px
     font-size 0
