--- a/src/html/情报管理-情报查看.pug
+++ b/src/html/情报管理-情报查看.pug
@@ -38,6 +38,10 @@ block content
                     .item 技术
                     .item 威胁
                     .item 新闻事件
+              label 研判人 :
+                .cont 无
+              label 状态 :
+                .cont.edit 未编辑
             .right-info
               label.checkbox
                 input(type='checkbox' class='collect')
