--- a/src/style/情报管理-情报查看.styl
+++ b/src/style/情报管理-情报查看.styl
@@ -12,11 +12,14 @@ input
     float left
     .cont
       display inline-block
-      margin-right 12px 
+      margin-right 12px
+    .edit
+      color #77bc7e
     .w-dropdown
       position relative
       display inline-block
       margin-left 8px
+      margin-right 12px
       .btn
         height 20px
         width 100%
