--- a/src/style/情报管理-情报查看.styl
+++ b/src/style/情报管理-情报查看.styl
@@ -2,10 +2,31 @@ input
   display none
 .m-contlist>.item>.body
   padding-left 28px
+  height 120px
+  margin-bottom 22px
+  >.ch-abs
+    margin-bottom 15px
+    >label
+      float left
+    >.cont
+      font-size 12px
+      text-indent 4px
+      border-bottom 1px dashed #dbe0e4
+      line-height: 22px;
+      padding-bottom: 15px;
+  >.en-abs
+    height 44px
+    
+
+    >label
+      float left
+    >.cont
+      text-indent: 4px         
+
 .m-contlist>.item>.foot
   height 20px
-  margin-top 9px
-  margin-bottom 9px
+  margin-top 7px
+  margin-bottom 5px
   color #999999 
   padding-left 28px
   .left-info
@@ -86,7 +107,10 @@ input
       font-size 12px
       font-family "微软雅黑"
       
-  
+.m-contlist.list
+  >.item>.body
+    display none
+
   
 
 
