--- a/src/html/part/func.pug
+++ b/src/html/part/func.pug
@@ -18,9 +18,9 @@ mixin filter(page)
           .btn 批量提交
           .btn 批量研判
       .right
-        if page == '大屏管理-情报展示'||'情报库-情报库'||'情报管理-情报查看'
+        if page == '情报管理-情报查看'
           .btn 导入
-          .btn 刷新
+        .btn 刷新
         .m-dropdown
           button.btn
             .text 每页显示10
