--- a/src/style/情报管理-情报查看.styl
+++ b/src/style/情报管理-情报查看.styl
@@ -88,6 +88,7 @@ input
             background #ecf3fe
   .right-info
     float right
+    margin-fight -17px
     label.checkbox :checked ~ .img.collect
       background  url(../image/collect.png) no-repeat 
     label.checkbox 
